# signatrust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  Makefile  README.en.md  README.md  README.zh.md  build.rs  docker-compose.yaml
app/: Dockerfile  components.d.ts  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/api/: manage.ts  request.ts  search.ts  show.ts  template.ts
app/opendesign/: index.ts  package.json
app/src/: App.vue  before.ts  main.ts  router.ts  vite-env.d.ts
config/: client.toml  server.toml
deploy/: config.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml
docker/: Dockerfile  Dockerfile.client_glibc  Dockerfile.client_musl_aarch64  Dockerfile.client_musl_x86_64  Dockerfile.control-server  Dockerfile.data-server  Dockerfile.openeuler  Dockerfile.sqlx-cli  server.toml
docs/: fingerprint.md  how to sign EFI file.md  how to sign a IMA file.md  how to sign kernelmodule file.md  how to sign rpm&srpm file.md  how to sign&verify a EFI image.md  how to sign&verify a generic file.md  integrate-signatrust-with-copr.md  private and public keys.md  support-ca.md  如何为EFI文件签名.md
migrations/: 20221220070859_initialize-table.down.sql  20221220070859_initialize-table.up.sql  20230512225401_add-datakey-visibility.down.sql  20230512225401_add-datakey-visibility.up.sql  20230525090101_remove-clusterkey-expire-time.down.sql  20230525090101_remove-clusterkey-expire-time.up.sql  20230527011302_add-email-to-request-delete.down.sql  20230527011302_add-email-to-request-delete.up.sql  20230614032140_support-ca-and-crl.down.sql  20230614032140_support-ca-and-crl.up.sql  20230727020628_extend-datakey-name.down.sql  20230727020628_extend-datakey-name.up.sql
proto/: signatrust.proto
scripts/: db-migration.sh  initialize-database.sh  initialize-redis.sh  initialize-user-and-keys.sh
src/: client_entrypoint.rs  control_admin.rs  control_admin_entrypoint.rs  control_server_entrypoint.rs  data_server_entrypoint.rs
src/application/: datakey.rs  mod.rs  user.rs
src/client/: mod.rs  sign_identity.rs
src/domain/: encryption_engine.rs  encryptor.rs  kms_provider.rs  mod.rs  sign_plugin.rs  sign_service.rs
src/infra/: mod.rs
src/model/: mod.rs
src/server/: control_server.rs  data_server.rs
src/service/: mod.rs
src/util/: attributes.rs  cache.rs  config.rs  error.rs  key.rs  mod.rs  options.rs  sign.rs  signer_container.rs
test_assets/: Imath-3.1.4-1.oe2303.x86_64.rpm  at-3.1.10-43.el6.x86_64.rpm  efi.sign  private.pem  shimx64.efi.signed
test_assets/sbom/: cyclonedx-sbom.json  cyclonedx-sbom.xml  spdx-sbom.json  spdx-sbom.xml
tools/migrate-pgp-local-keys/: README.md  import.py  migrate.py  (+1 more)
(+173 files in other folders)
