[package]
name = "signatrust"
version = "0.1.0"
edition = "2021"
authors = ["TommyLike <tommylikehu@gmail.com"]
categories = ["rpm", "efi", "ko", "signature"]
description = """
Signatrust provides a safe and high throughput solution for signing linux packages&binaries in Rust.
"""
documentation = "https://gitee.com/openeuler/signatrust/#readme"
homepage = "https://gitee.com/openeuler/signatrust"
keywords = ["rpm", "efi", "ko", "signature"]
license = "MulanPSL – 2.0"
readme = "README.md"
repository = "https://gitee.com/openeuler/signatrust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.22", features = ["derive", "env"] }
config = "0.13.3"
lazy_static = "1.4.0"
actix-web = { version = "4.3.0", features = ["openssl"]}
tonic = {version = "0.8.2", features = ["tls", "tls-roots", "transport", "channel"]}
prost = "0.11.0"
signal-hook = "0.3.14"
tokio-stream = "0.1.11"
tokio = {version = "1.21.2", features = ["rt-multi-thread", "fs", "sync"]}
log = "0.4.17"
async_once = "0.2.6"
async-trait = "0.1.60"
md-5 = "0.10.5"
notify = "5.0.0"
env_logger = "0.10.0"
anyhow = "1.0.66"
thiserror = "1.0.38"
sqlx = { version = "0.6.3", features = ["migrate", "mysql", "runtime-tokio-rustls", "chrono"] }
once_cell = "1.16.0"
reqwest = { version = "0.11.13", features=["json"]}
serde_json = "1.0.91"
serde_urlencoded = "0.7.1"
serde = "1.0.151"
aes-gcm-siv = "0.11.1"
aes-gcm = "0.10.1"
rand="0.8.5"
generic-array = "0.14.6"
chrono = { version = "0.4.23", features = ["clock"]}
hex = "0.4.3"
pgp = "0.9.0"
smallvec = "1.10.0"
validator = { version = "0.16", features = ["derive"] }
num_cpus = "1.15.0"
walkdir = "2.3.2"
async-channel = "1.8.0"
uuid = { version = "1.3.0", features = ["v4"]}
rpm-infra ="0.0.3"
dns-lookup = {version="1.0.8"}
#sha1 is used in openpgp signature generation
sha1 = "0.10.5"
sha2 = "0.10.6"
bincode = "2.0.0-rc.2"
secstr = "0.5.1"
openssl = "0.10.45"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["redis-rs-session"]}
actix-limitation = "0.4.0"
time = "0.3.17"
openidconnect = "2.5.0"
url = "2.3.1"
futures = "0.3.26"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version ="3.1.3", features = ["actix-web"]}

[build-dependencies]
tonic-build = "0.8.4"

[[bin]]
name = "client"
path = "src/client_entrypoint.rs"

[[bin]]
name = "data-server"
path = "src/data_server_entrypoint.rs"

[[bin]]
name = "control-server"
path = "src/control_server_entrypoint.rs"

[[bin]]
name = "control-admin"
path = "src/control_admin_entrypoint.rs"

[profile.release]
strip = "debuginfo"